--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,27 @@
 h1 {
   font-family: verdana, sans-serif;
   font-size: 50px;
-  color: black;
+  color: white;
   text-align: center;
   font-weight: normal;
+}
+
+p {
+  font-family: verdana, sans-serif;
+  color: gray;
+  text-align: center;
+  font-size: 21px
+}
+
+h2 {
+  font-family: verdana, sans-serif;
+  font-size: 42px;
+  font-weight: 300;
+  text-align: center;
+  color: white;
+}
+
+.link {
+  color: aquamarine;
+  font-size: 16px;
 }
